--- a/BST copy/readme
+++ b/BST copy/readme
@@ -1,1 +1,4 @@
 
+Binary Search Tree Maker:
+
+Enter a numerical value representing a node into the text field and add. This will create a visual representation of the Binary Tree.
